Fixed modal dialog on small screens

--- a/app/assets/stylesheets/_media-medium.css.scss
+++ b/app/assets/stylesheets/_media-medium.css.scss
@@ -25,7 +25,8 @@ $break-medium: 768px;
   }
 
   .modal-dialog {
-    margin: 0 !important;
+    margin-left: 0;
+    margin-right: 0;
     position: relative;
   }
 
